[gd_scene load_steps=20 format=3 uid="uid://d13tht5j1qxqq"]

[ext_resource type="Theme" uid="uid://co20v1mxv2dfm" path="res://main/ui/_theme/theme.tres" id="1_vtqwt"]
[ext_resource type="Script" path="res://main/ui/submenu/save/save_file_menu.gd" id="2_djbua"]
[ext_resource type="PackedScene" uid="uid://3k2xt0kc4klb" path="res://main/ui/submenu/save/save_file_panel/SaveFilePanel.tscn" id="3_v1i8r"]
[ext_resource type="FontFile" uid="uid://b8lxwo5dkwrs4" path="res://main/ui/_theme/font/Poppins-Regular.ttf" id="4_0qhiq"]
[ext_resource type="Texture2D" uid="uid://skg5bmd8m812" path="res://main/ui/_icons/close.png" id="5_3a25r"]
[ext_resource type="AudioStream" uid="uid://dfb0hid704r07" path="res://main/ui/submenu/save/scribble.wav" id="6_1x0p7"]
[ext_resource type="AudioStream" uid="uid://bqxk8dirbvq1v" path="res://main/ui/submenu/save/crumble.wav" id="7_ao1vs"]

[sub_resource type="Theme" id="Theme_n7xkt"]
default_font = ExtResource("4_0qhiq")
default_font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e160y"]
content_margin_left = 12.0
content_margin_top = 16.0
content_margin_right = 12.0
content_margin_bottom = 24.0
bg_color = Color(0.509804, 0.517647, 0.560784, 0.937255)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4hoky"]
content_margin_left = 3.0
bg_color = Color(0.247059, 0.247059, 0.301961, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dh3by"]
content_margin_left = 3.0
bg_color = Color(0.313726, 0.313726, 0.360784, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_top = 6.0
expand_margin_bottom = 6.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3xv66"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.313726, 0.313726, 0.360784, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r1ibo"]
content_margin_right = 12.0

[sub_resource type="Animation" id="Animation_swdin"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ho8so"]
resource_name = "enter"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_obmfd"]
resource_name = "exit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_01f6e"]
_data = {
"RESET": SubResource("Animation_swdin"),
"enter": SubResource("Animation_ho8so"),
"exit": SubResource("Animation_obmfd")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_1lfs6"]
streams_count = 1
stream_0/stream = ExtResource("6_1x0p7")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_nsldi"]
streams_count = 1
stream_0/stream = ExtResource("7_ao1vs")

[node name="SaveFileMenu" type="Control" node_paths=PackedStringArray("anim", "back_button")]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vtqwt")
script = ExtResource("2_djbua")
save_file_panel = ExtResource("3_v1i8r")
anim = NodePath("AnimationPlayer")
back_button = NodePath("SaveContainer/PanelContainer/Back")

[node name="SaveCover" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.556863)

[node name="SaveContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_n7xkt")
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 48

[node name="PanelContainer" type="PanelContainer" parent="SaveContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e160y")

[node name="VBoxContainer" type="VBoxContainer" parent="SaveContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="SaveContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Save Files"

[node name="FileLabelEdit" type="LineEdit" parent="SaveContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 21
theme_override_styles/focus = SubResource("StyleBoxFlat_4hoky")
theme_override_styles/normal = SubResource("StyleBoxFlat_dh3by")
placeholder_text = "create new file..."

[node name="PanelContainer" type="PanelContainer" parent="SaveContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_3xv66")

[node name="ScrollContainer" type="ScrollContainer" parent="SaveContainer/PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_r1ibo")
vertical_scroll_mode = 2

[node name="SaveFileContainer" type="VBoxContainer" parent="SaveContainer/PanelContainer/VBoxContainer/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 8

[node name="OptionContainer" type="HBoxContainer" parent="SaveContainer/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 8

[node name="SaveFileButton" type="Button" parent="SaveContainer/PanelContainer/VBoxContainer/OptionContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 21
text = "save"

[node name="LoadFileButton" type="Button" parent="SaveContainer/PanelContainer/VBoxContainer/OptionContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 21
text = "load"

[node name="DeleteFileButton" type="Button" parent="SaveContainer/PanelContainer/VBoxContainer/OptionContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 21
text = "delete"

[node name="Back" type="Button" parent="SaveContainer/PanelContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
icon = ExtResource("5_3a25r")
icon_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_01f6e")
}
speed_scale = 2.0

[node name="SavePlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_1lfs6")
pitch_scale = 1.2

[node name="DeletePlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_nsldi")
pitch_scale = 1.2
